# custom-domains

./: Cargo.toml  README.md  run_tests.sh
.github/workflows/: publish.yml  test.yml
backend/: Cargo.toml
backend/src/: backend_service.rs  handlers.rs  lib.rs  metrics.rs  models.rs  openapi.rs  router.rs
base/: Cargo.toml
base/src/: cli.rs  helpers.rs  lib.rs
base/src/traits/: cipher.rs  mod.rs  repository.rs  time.rs  validation.rs
base/src/types/: acme.rs  cipher.rs  domain.rs  mod.rs  task.rs  time.rs  validator.rs  worker.rs
canister-client/: Cargo.toml
canister-client/src/: canister_repository.rs  client.rs  lib.rs
canister/api/: Cargo.toml
canister/api/src/: lib.rs
canister/canister_backend/: Cargo.toml  canister_backend.did  dfx.json
canister/canister_backend/src/: lib.rs  metrics.rs  state.rs  storage.rs
canister_client/: Cargo.toml
canister_client/src/: canister_client.rs  canister_repository.rs  lib.rs  local_client.rs  local_repository.rs  local_state.rs
examples/: custom_domains_example.rs
src/: acme.rs  api.rs  canister_repository.rs  crypto.rs  helpers.rs  lib.rs  metrics.rs  repository.rs  state.rs  task.rs  task_manager.rs  time.rs  validation.rs  work.rs
src/api/: backend_service.rs  handlers.rs  metrics.rs  mod.rs  models.rs  routes.rs
tests/: Cargo.toml  canister_tests.rs  e2e_test.rs  helpers.rs
