[package]
name = "ic-custom-domains"
version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

resolver = "2"

[workspace]
members = [
    "backend",
    "base",
    "canister/api",
    "canister/canister_backend",
    "canister_client",
]
default-members = [
    ".",
    "backend",
    "base",
    "canister_client",
    "canister/api",
    "canister/canister_backend",
]

[workspace.package]
version = "0.0.0-git"
edition = "2024"
license = "Apache-2.0"
description = "Internet Computer Custom Domains feature crates"
homepage = "https://internetcomputer.org/"
repository = "https://github.com/dfinity/custom-domains"

[workspace.dependencies]
anyhow = "1.0.98"
arc-swap = { version = "1.7.1" }
async-trait = "0.1.89"
axum = "0.8.4"
axum-extra = "0.10.1"
axum-server = "0.7.2"
base64 = "0.22.1"
candid = "0.10.16"
candid_parser = "0.2.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4"
clap = { version = "4.5.20", features = ["derive", "string", "env"] }
derive-new = "0.7.0"
fqdn = "0.5.2"
hex = "0.4.3"
hickory-resolver = "0.25"
humantime = "2.2.0"
ic-bn-lib = { version = "0.1", features = [
    "acme-dns",
    "cert-providers",
    "custom-domains",
] }
ic-bn-lib-common = "0.1"
ic-cdk = "0.17"
ic-cdk-timers = "0.11"
ic-custom-domains-backend = { version = "0.0.0-git", path = "./backend" }
ic-custom-domains-base = { version = "0.0.0-git", path = "./base" }
ic-custom-domains-canister-api = { version = "0.0.0-git", path = "./canister/api" }
ic-custom-domains-canister-client = { version = "0.0.0-git", path = "./canister_client" }
ic-http-types = "0.1.0"
ic-stable-structures = "0.7.0"
mockall = "0.13.1"
pem = "3.0.5"
pocket-ic = "12.0.0"
prometheus = "0.14.0"
rcgen = { version = "0.14" }
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1" }
tokio-util = "0.7.15"
tower = "0.5.2"
tower-http = {version = "0.6.6", features = ["trace"] }
tracing = {version = "0.1.41", features = ["attributes"] }
tracing-subscriber = "0.3.19"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
x509-parser = "0.17.0"

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
candid = { workspace = true }
chacha20poly1305 = { workspace = true }
fqdn = { workspace = true }
hex = { workspace = true }
ic-bn-lib = { workspace = true }
ic-bn-lib-common = { workspace = true }
ic-custom-domains-backend = { workspace = true }
ic-custom-domains-base = { workspace = true }
ic-custom-domains-canister-api = { workspace = true }
ic-custom-domains-canister-client = { workspace = true }
pem = { workspace = true }
pocket-ic = { workspace = true }
prometheus = { workspace = true }
rcgen = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
x509-parser = { workspace = true }

[profile.release]
lto = "thin"           # For faster builds with some cross-crate optimizations
opt-level = "z"        # Optimize for small code size
codegen-units = 1      # Single codegen unit for better optimizations (slower compile)
overflow-checks = true # Keep runtime checks for arithmetic overflow
strip = "symbols"      # Remove debug symbols to reduce binary size
panic = "abort"        # Abort on panic (smaller binary, no unwinding)
