[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
base = { path = "../base" }
candid = { workspace = true }
canister-client = { path = "../canister_client" }
derive-new = { workspace = true }
fqdn = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
