[package]
name = "ic-custom-domains-backend"
version.workspace = true
edition.workspace = true

[features]
openapi = ["utoipa", "utoipa-swagger-ui"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
candid = { workspace = true }
chacha20poly1305 = { workspace = true }
clap = { workspace = true }
derive-new = { workspace = true }
fqdn = { workspace = true, features = ["punycode"] }
ic-bn-lib = { workspace = true }
ic-bn-lib-common = { workspace = true }
ic-custom-domains-base = { path = "../base" }
ic-custom-domains-canister-client = { path = "../canister_client" }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }

[dev-dependencies]
ic-bn-lib = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
