[package]
name = "base"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
candid = { workspace = true }
canister-api = { path = "../canister/api" }
chrono = { workspace = true }
derive-new = { workspace = true }
fqdn = { workspace = true }
hickory-resolver = { workspace = true }
ic-bn-lib = { workspace = true }
mockall = { workspace = true }
pem = { workspace = true }
chacha20poly1305 = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
