[package]
name = "ic-custom-domains-base"
version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

documentation = "https://docs.rs/ic-custom-domains-base"

[features]
openapi = ["utoipa"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
candid = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
derive-new = { workspace = true }
fqdn = { workspace = true }
hickory-resolver = { workspace = true }
humantime = { workspace = true }
ic-bn-lib = { workspace = true }
ic-bn-lib-common = { workspace = true }
ic-custom-domains-canister-api = { workspace = true }
mockall = { workspace = true }
pem = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true, optional = true }
x509-parser = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
