[package]
name = "canister-client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
base = { path = "../base" }
candid = { workspace = true }
canister-api = { path = "../canister/api" }
derive-new = { workspace = true }
fqdn = { workspace = true }
ic-bn-lib = { workspace = true }
ic-agent = { workspace = true }
tracing = { workspace = true }
trait-async = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true }
