[package]
name = "canister-client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
base = { path = "../base" }
candid = { workspace = true }
canister-api = { path = "../canister/api" }
derive-new = { workspace = true }
fqdn = { workspace = true }
ic-bn-lib = { workspace = true }
ic-bn-lib-common = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
