[package]
name = "ic-custom-domains-canister-client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
candid = { workspace = true }
derive-new = { workspace = true }
fqdn = { workspace = true }
ic-bn-lib = { workspace = true }
ic-bn-lib-common = { workspace = true }
ic-custom-domains-base = { workspace = true }
ic-custom-domains-canister-api = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
