[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
backend = { path = "../backend" }
base = { path = "../base" }
canister-client = { path = "../canister-client" }
ic-bn-lib = { workspace = true }
prometheus = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[test]]
name = "integration"
path = "e2e_test.rs"
