[package]
name = "tests"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
backend = { path = "../backend" }
base = { path = "../base" }
canister-client = { path = "../canister_client" }
ic-bn-lib = { workspace = true }
prometheus = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[test]]
name = "integration"
path = "e2e_test.rs"
