[package]
name = "canister"
version.workspace = true
edition.workspace = true

[dependencies]
canister-api = { path = "../api" }
candid = { workspace = true }
fqdn = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-http-types = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
strum = { workspace = true }
ic-stable-structures = { workspace = true }

[lib]
crate-type = ["cdylib"]
